error analysis data for efficiency measurements

--- a/muon-lifetime/data/eff/README
+++ b/muon-lifetime/data/eff/README
@@ -1,1 +1,3 @@
 contains data in the format of (efficiency, high voltage setting)
+
+Note: S*-eff-err.txt files contain multiple measurements at specific voltages for error anlaysis.  
