--- a/phase-x/data/README
+++ b/phase-x/data/README
@@ -26,7 +26,7 @@ V_cool  = 12 V (w/o thermal lid)
 
 
 -----------------------------------
-V02 phase tranistion measuremnts
+BaTi03 phase tranistion measuremnts
 -----------------------------------
 
 ### Run 1 (April 18th 2017) ###
